fix: Introduce explicit max font-size to prevent too large text on large screens

--- a/src/components/Sidebar/Navbar/Navbar.scss
+++ b/src/components/Sidebar/Navbar/Navbar.scss
@@ -76,7 +76,7 @@
     align-items: center;
     gap: 30px;
     list-style: none;
-    font-size: 2.3vh;
+    font-size: min(2.3vh, 18px);
     margin: 0;
     padding: 20px 30px;
 
@@ -85,7 +85,7 @@
     }
 
     .navbar-toggle {
-      font-size: 3vh;
+      font-size: min(3vh, 24px);
     }
 
     .title-items {
@@ -114,13 +114,13 @@
       }
 
       .active {
-        font-size: 3vh;
+        font-size: min(3vh, 24px);
       }
     }
 
     .header-items {
       font-family: 'InriaSerif-Regular';
-      font-size: 2vh;
+      font-size: min(2vh, 14px);
       list-style: none;
       display: flex;
       justify-content: space-between;
@@ -138,7 +138,7 @@
     display: flex;
     justify-content: space-evenly;
     gap: 15px;
-    font-size: 2vh;
+    font-size: min(2vh, 14px);
 
     .legend-item {
       display: flex;
